--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": ">=5.3.0"
     },
     "autoload":{
-        "classmap":"noaa/Forcaster.php"
+        "psr-4":{"noaa\\":"noaa/"},
+        "files":["noaa/Forecaster.php"]
     }
 }
